Added more expressive capabilities to display abstract rule exception messages.